# library_api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  template.env
Writerside/: tw.tree  writerside.cfg
Writerside/topics/: starter-topic.md
alembic/: env.py
alembic/versions/: v0.py  v0_37b06a7c4602_.py  v0_6c8315f7f3ce_.py  v0_migration.py  v1_ed73b3cff944_.py  v1_load.py
alembic_insertions/: __init__.py  base_queries.py  domain_v0.py  v1_load.py
alembic_insertions/domain/: domain_base.py
alembic_insertions/versions/: __init__.py  base_inserter.py  v0.py
envs/: env_test
envs/docker/local/: api  db
requirements/: base.txt  dev.txt
src/: main.py
src/config/: database.py  environemnt.py  logger.py
src/config/exception/: __init__.py  exception.py  handler.py
src/controller/: __init__.py  book.py
src/middleware/: __init__.py  cors.py  database.py  trusted_host.py
src/repository/: __init__.py  base.py  book.py
src/router/: __init__.py  book.py  dependencies.py
src/schema/: __init__.py  base.py  book.py  domain.py  paginate.py
src/schema/custom_fields/: __init__.py  isbn.py
tests/: __init__.py
tests/config/: __init__.py  custom_gen_factory.py  database.py  postgres_docker.py
tests/enums/: __init__.py  base.py  book_genre.py  domain_base.py
tests/factories/: __init__.py  base.py  book.py
tests/integration/: conftest.py
tests/integration/infra/: test_alembic.py
tests/integration/router/: test_book.py
tests/unit/schema/: conftest.py  test_book.py
