[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

[tool.poetry]
name = "library-api"
version = "0.1.0"
description = ""
authors = ["Marco Belo <marco.barone.belo@gmail.com>"]
readme = "README.md"
# packages = [{include = "library_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.6"
fastapi-pagination = "^0.12.4"
alembic = "^1.11.1"
fastapi-utils = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pyhamcrest = "^2.0.4"
docker = "^6.1.3"
mixer = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
